k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: construction-api
  namespace: construction
  labels:
    app: construction-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: construction-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: construction-api
    spec:
      containers:
        - name: construction-api
          image: constructionacr99.azurecr.io/construction-api:v1 
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
