k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: construction-api-service
  namespace: construction
spec:
  selector:
    app: construction-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
